--- a/lessons/l9g-php-native-oidc/main.css
+++ b/lessons/l9g-php-native-oidc/main.css
@@ -21,6 +21,11 @@ limitations under the License.
 .appheader{
   margin-top: 1em;
 }
+
+.appcard-title {
+  font-size: 18pt;
+  font-weight: 400;
+}
       
 .red-background {
   background-color: rgba(255, 99, 71, 0.2) !important;
